# UCL_ROBOBOAT_TEAM_21-22

./: README.md
UCL_ROBOBOAT_TEAM_21-22.git/: config  packed-refs
UCL_ROBOBOAT_TEAM_21-22.git/objects/pack/: pack-9d0e2890b9f2bfd153e6858426e017d1219657eb.idx  pack-9d0e2890b9f2bfd153e6858426e017d1219657eb.pack
devel/: .catkin  local_setup.sh  setup.sh
devel/include/find_object_2d/: DetectionInfo.h  ObjectsStamped.h
devel/include/heron_msgs/: Course.h  Helm.h
devel/include/uuv_control_cascaded_pid/: AccelerationControlConfig.h  PositionControlConfig.h  VelocityControlConfig.h
devel/include/uuv_control_msgs/: GetMBSMControllerParamsRequest.h  GetPIDParamsRequest.h  GetPIDParamsResponse.h  GetSMControllerParamsResponse.h  GetWaypointsResponse.h  GoToIncrementalResponse.h  GoToResponse.h  HoldRequest.h  HoldResponse.h  InitWaypointsFromFileResponse.h  IsRunningTrajectoryResponse.h  ResetControllerResponse.h  SetMBSMControllerParamsResponse.h  SetSMControllerParamsRequest.h  SetSMControllerParamsResponse.h  SwitchToAutomaticRequest.h  SwitchToManualRequest.h  SwitchToManualResponse.h  Waypoint.h  WaypointSet.h
devel/include/uuv_gazebo_ros_plugins_msgs/: FloatStamped.h  GetListParamRequest.h  GetModelPropertiesResponse.h  GetThrusterEfficiencyRequest.h  GetThrusterStateRequest.h  GetThrusterStateResponse.h  SetThrusterEfficiencyRequest.h  SetThrusterEfficiencyResponse.h  SetThrusterStateRequest.h  SetUseGlobalCurrentVelRequest.h  SetUseGlobalCurrentVelResponse.h  ThrusterConversionFcn.h  UnderwaterObjectModel.h
devel/include/uuv_sensor_ros_plugins_msgs/: ChangeSensorStateRequest.h  ChangeSensorStateResponse.h  DVLBeam.h  PositionWithCovarianceStamped.h  Salinity.h
devel/include/uuv_thruster_manager/: GetThrusterManagerConfigRequest.h  SetThrusterManagerConfigResponse.h
devel/include/uuv_world_ros_plugins_msgs/: GetCurrentModelRequest.h  GetCurrentModelResponse.h  SetCurrentDirectionRequest.h  SetCurrentVelocityRequest.h  SetOriginSphericalCoordRequest.h  SetOriginSphericalCoordResponse.h  TransformFromSphericalCoordRequest.h  TransformToSphericalCoordResponse.h
devel/lib/find_object_2d/: find_object_2d  tf_example
devel/lib/heron_controller/: controller
devel/lib/heron_nmea/: command_publisher  sonar_publisher
devel/lib/heron_pointcloud/: pcl
devel/lib/pkgconfig/: find_object_2d.pc  heron_base.pc  heron_bringup.pc  heron_control.pc  heron_controller.pc  heron_description.pc  heron_gazebo.pc  heron_msgs.pc  heron_navigation.pc  heron_nmea.pc  heron_pointcloud.pc  heron_viz.pc  heron_worlds.pc  sosa_world.pc  talsperre_world.pc  uuv_assistants.pc  uuv_auv_control_allocator.pc  uuv_control_cascaded_pid.pc  uuv_control_msgs.pc  uuv_control_utils.pc  uuv_descriptions.pc  uuv_gazebo.pc  uuv_gazebo_plugins.pc  uuv_gazebo_ros_plugins.pc  uuv_gazebo_ros_plugins_msgs.pc  uuv_gazebo_worlds.pc  uuv_sensor_ros_plugins.pc  uuv_sensor_ros_plugins_msgs.pc  uuv_teleop.pc  uuv_thruster_manager.pc  uuv_trajectory_control.pc  uuv_tutorial_disturbances.pc  uuv_tutorial_dp_controller.pc  uuv_tutorial_seabed_world.pc  uuv_world_plugins.pc  (+2 more)
install/: .rosinstall  local_setup.sh
install/share/heron_navigation/: package.xml
install/share/heron_pointcloud/: package.xml
install/share/sosa_world/: package.xml
install/share/sosa_world/launch/: sosa_seabed_world.launch
install/share/sosa_world/models/sosa_seabed/: model.config  model.sdf
install/share/sosa_world/worlds/: sosa_underwater.world
install/share/talsperre_world/: package.xml
install/share/talsperre_world/launch/: talsperre.launch
install/share/talsperre_world/models/talsperre/: model.config  model.sdf
install/share/talsperre_world/worlds/: talsperre.world
src/src/: test_1
(+271 files in other folders)
