<?xml version="1.0"?>
<package format="2">
  <name>heron_pointcloud</name>
  <version>1.0.0</version>
  <description>Retrieving a pointcloud from the terrain</description>
  <maintainer email="dressels@mailserver.tu-freiberg.de">Samuel Dressel</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>open3d</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>
  <build_export_depend>libpcl-all</build_export_depend>
  <build_export_depend>open3d</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>open3d</exec_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <export>
  </export>
</package>