<?xml version="1.0"?>
<package format="2">
  <name>sosa_world</name>
  <version>0.6.11</version>
  <description>Talsperre Sosa</description>

  <maintainer email="dressels@mailserver.tu-freiberg.de">Samuel Dressel</maintainer>

  <author email="dressels@mailserver.tu-freiberg.de">Samuel Dressel</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
