<?xml version="1.0"?>
<package format="2">
  <name>talsperre_world</name>
  <version>0.0.0</version>
  <description>World Package for a testing reservoir</description>
  <maintainer email="dressels@mailserver.tu-freiberg.de">Samuel Dressel</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
